Fix spacing now that image carousel is gone

--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: nowrap;
   margin-bottom: 20px;
 
@@ -10,8 +10,7 @@
     border-radius: 8px;
     box-sizing: border-box;
     display: inline-block;
-    max-width: 780px;
-    margin-right: 5%;
+    max-width: 900px;
     padding: 20px;
     flex-grow: 2;
   }
