--- a/src/components/hero/style.css
+++ b/src/components/hero/style.css
@@ -2,6 +2,7 @@
   border-radius: 8px;
   margin-bottom: 20px;
   margin-top: 56px;
+  max-width: 900px;
   padding: 20px;
   text-align: start;
 }
